--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <header>
       <h1>My Training Diary</h1>
         <h3>Name: Ankur</h3>
-        <h3>URN: 2302473</h3>
+        <h3>URN: </h3>
         <h3>Section: D3CSA1</h3>
         <h3>Course: Training (TR-102)</h3>
     </header>
